# davi_traff_weath

./: .gitignore  app.py  chart_accidents_by_hour.py  chart_accidents_by_month.py  chart_accidents_by_weather.py  chart_accidents_by_weekday.py  chart_accidents_over_time.py  chart_accidents_trend.py  chart_accidents_weather.py  chart_trend.py  clean_data.py  dashboard.py  geojson_layer.html  geojson_states_layer.html  global_state.py  hello_world.ipynb  layout.ipynb  main.py  pydeck_test.ipynb  pyproject.toml  statesArea.csv
assets/: style.css
charts/: accidents_over_time.py
population/: county.csv  state.csv
