[project]
name = "davi-traff-weath"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=3.2.0",
    "dash-bootstrap-components>=2.0.4",
    "dash-daq>=0.6.0",
    "dash-resizable-panels>=0.1.0",
    "fastparquet>=2024.11.0",
    "geopandas>=1.0.1",
    "geopy>=2.4.1",
    "h3>=4.3.1",
    "ipykernel>=6.30.1",
    "matplotlib>=3.9.4",
    "nbformat>=5.10.4",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "plotly-geo>=1.0.0",
    "pyarrow>=21.0.0",
    "pydeck>=0.9.1",
    "pyshp>=2.3.1",
    "scikit-learn>=1.6.1",
    "shapely>=2.1.1",
]
